--- a/layouts/shortcodes/tile_gr4.html
+++ b/layouts/shortcodes/tile_gr4.html
@@ -17,15 +17,15 @@
             <div class="tile-icon">
                 <i class="{{- .Get "fontawesome_icon" -}}" aria-hidden="true"></i>
             </div>
-            <h3 class="tile-title">{{- $title -}}</h3>
+            <h3 class="tile-title">{{- $title | safeHTML -}}</h3>
         </a>
         {{- else -}}
         <div class="tile-icon">
             <i class="{{ .Get "fontawesome_icon" }} nolink" aria-hidden="true"></i>
         </div>
-        <h3 class="tile-title nolink">{{- $title -}}</h3>
+        <h3 class="tile-title nolink">{{- $title | safeHTML  -}}</h3>
         {{- end -}}
     {{- end -}}
     </div>
-    <div class="tile-text tile-text2">{{- $text | markdownify -}}</div>
+    <div class="tile-text tile-text2">{{- $text | markdownify | safeHTML  -}}</div>
 </div>
