--- a/layouts/shortcodes/tile2.html
+++ b/layouts/shortcodes/tile2.html
@@ -15,11 +15,11 @@
         {{ $target = "_blank" }}
     {{- end -}}
     <a class="{{- .Get "link_class" -}}" href="{{- .Get "link_href" -}}" target="{{ $target }}">
-        <div class="tile-title">{{ $title }}</div>
+        <div class="tile-title">{{ $title | safeHTML }}</div>
     </a>
     <div class="tile-link">
         {{- with $text -}}
-            {{- . | markdownify -}}
+            {{- . | markdownify | safeHTML -}}
         {{- end -}}
     </div>
     {{- if (.Get "fontawesome_icon") -}}<i class="{{ .Get "fontawesome_icon" }}"{{- if (.Get "fontawesome_color") -}} style="color:{{ .Get "fontawesome_color" }};"{{- end -}} aria-hidden="true"></i>{{- end -}}
