--- a/static/stylesheets/custom_general.css
+++ b/static/stylesheets/custom_general.css
@@ -21,33 +21,29 @@
 }
 
 .article table {
-  margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 
 .article li p + ul {
-  margin-top: .9em;
+    margin-top: .9em;
 }
 
 .article ul li {
-  margin-bottom: 7px;
+    margin-bottom: 7px;
 }
 
 .article li > ul {
-  margin-top: 7px;
+    margin-top: 7px;
 }
 
 .h6-noanc {
-  margin-top: 0px;
-  margin-bottom: 7px;
-  padding-top: 0px;
+    margin-top: 0px;
+    margin-bottom: 7px;
+    padding-top: 0px;
 }
 
 :not(div.id-link-message) + .h6-noanc {
   margin-top: 24px;
-}
-
-.article dl {
-  margin: 5px;
 }
 
 .article dt {
@@ -62,10 +58,6 @@
 .article dd {
   margin-bottom: 7px;
   padding-left: 20px;
-}
-
-.article h5 {
-  font-weight: normal;
 }
 
 /* 「監査ログの一覧」で使用する設定 **************************************/
@@ -100,138 +92,153 @@
   margin-top: 0.9em;
 }
 
-/* 見出し部分の設定 *******************************************************/
+/* 768px以上の設定 *****************************************************/
+@media only screen and (min-width:768px){
+    .logo-img {
+        width: 140px;
+        height: 35px;
+        vertical-align: -10px;
+    }
+    
+    .logo-title {
+        padding-top: 0;
+        font-size: 18px;
+    }
+
+    .main {
+        top: 0px;
+    }
+
+    .hero {
+        height: 180px;
+  }
+
+}
+
+
+/* 20221003 */
 h2, h3, h4, h5 {
-  font-weight: 700
+	font-weight: 700
 }
 .header-wrap {
-  padding: 5px 16px 5px 6px
+    padding: 5px 16px 5px 6px
 }
 .article h1 {
-  padding-top: 3rem;
-  font-size: 2.2rem
+	padding-top: 3rem;
+	font-size: 2.2rem
 }
 .article h2 {
-  margin-top: 2rem;
-  padding-top: 2rem;
-  font-size: 1.6rem;
-  position: relative
+	margin-top: 2rem;
+	padding-top: 2rem;
+	font-size: 1.6rem;
+	position: relative
 }
 .article h2:after {
-  content: "";
-  border-top: 1px solid #ddd;
-  position: absolute;
-  width: calc(100vw - 32px);
+	content: "";
+    border-top: 1px solid #ddd;
+    position: absolute;
+    width: calc(100vw - 32px);
 	top: 0;
-  left: 0
+    left: 0
 }
 h3.h3-contents {
-  margin-top: -36px;
-  padding-top: 76px;
-  margin-bottom: 1.5rem;
-  padding-left: .8rem;
-  font-size: 1.25rem;
-  position: relative
+	margin-top: -36px;
+    padding-top: 76px;
+	margin-bottom: 1.5rem;
+	padding-left: .8rem;
+	font-size: 1.4rem;
+	position: relative
 }
 h3.h3-contents:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  height: 1.6rem;
-  border-left: 4px solid #e94f90;
-  border-image: linear-gradient(to top, #287bf4 0%, #e94f90 100%);
-  border-image-slice: 1;
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 76px;
+    bottom: 0;
+	border-left: 4px solid #e94f90;
+    border-image: linear-gradient(to top, #287bf4 0%, #e94f90 100%);
+    border-image-slice: 1
+}
+.article h4 {
+	font-size: 1.3rem
 }
 h1 + .id-link-button {
-  margin-top: 3.5rem;
+    margin-top: 3.5rem
 }
 h2 + .id-link-button {
-  margin-top: 4.2rem
+    margin-top: 4.2rem
 }
 h3 + .id-link-button {
-  margin-top: 2.5rem;
+    margin-top: 2.5rem
+}
+h4 + .id-link-button {
+    margin-top: 1.8rem
+}
+h5 + .id-link-button {
+    margin-top: 1.4rem
 }
 .article ol {
-  padding-left: 0
-}
-.article dl {
-  margin: 0
+	padding-left: 0
 }
 .sidebar-wrap {
-  background-color: #fff
+    background-color: #fff
 }
 #tree-main a {
-margin-top: 0;
-  margin-bottom: 0
+	margin-top: 0;
+    margin-bottom: 0
 }
 #tree-main a[aria-expanded="true"] {
-font-weight: 700
+	font-weight: 700
 }
 .jstree-ocl {
-  padding: 0 5px 0 0
+    padding: 0 5px 0 0
 }
 #rightside-bar {
-  margin-top: 6rem
+    margin-top: 6rem
 }
 #tree-main ul {
-  padding-inline-start: 0
+    padding-inline-start: 0
 }
 .footer-wrap {
-  padding-right: 16px;
-padding-left: 16px
+    padding-right: 16px;
+	padding-left: 16px
 }
-
-/* 768px以上の設定 *******************************************************/
+.article code, .article pre {
+    white-space: inherit
+}
 @media (min-width:768px) {
-  .logo-img {
-    width: 140px;
-    height: 35px;
-    vertical-align: -10px;
-  }
-  .logo-title {
-    padding-top: 0;
-    font-size: 18px;
-  }
-  .main {
-    top: 0px;
-  }
-  .hero {
-    height: 180px;
-  }
-  .page {
-    padding-right: 16px
-  }
-  .tree-wrap {
-    padding-left: 6px;
-    flex: 0 0 292px
-  }
-  .article h2:after {
-    width: calc(100vw - 342px)
-  }
-  #tree-nav {
-    border-right: none
-  }
-  .contents-wrap {
-    border-left: 1px solid #e6e6e6;
-    width: auto;
-    flex: auto
-  }
-  #tree-main ul {
-    padding-inline-start: 10px;
-  }
-  .jstree-container-ul {
-    padding-top: 18px
-  }
+	.page {
+		padding-right: 16px
+	}
+	.tree-wrap {
+		padding-left: 6px;
+		flex: 0 0 292px
+	}
+	.article h2:after {
+		width: calc(100vw - 342px)
+	}
+	#tree-nav {
+		border-right: none
+	}
+	.contents-wrap {
+		border-left: 1px solid #e6e6e6;
+		width: auto;
+		flex: auto
+	}
+	#tree-main ul {
+		padding-inline-start: 10px;
+	}
+	.jstree-container-ul {
+		padding-top: 18px
+	}
 }
-
-/* 1059px以上の設定 *****************************************************/
 @media (min-width:1059px) {
-  .sidebar-wrap {
-    float: none;
-    flex: 0 0 232px;
-    padding-left: 32px
-  }
-  .article h2:after {
-    width: calc(100vw - 542px)
-  }
+	.sidebar-wrap {
+		float: none;
+		flex: 0 0 232px;
+		padding-left: 32px
+	}
+	.article h2:after {
+		width: calc(100vw - 542px)
+	}
 }
