--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -222,20 +222,20 @@
 
 /* 見出し部分の設定 *******************************************************/
 h2, h3, h4, h5 {
-	font-weight: 700
+	font-weight: 700;
 }
 .header-wrap {
-  padding: 5px 16px 5px 6px
+  padding: 5px 16px 5px 6px;
 }
 .article h1 {
   padding-top: 3rem;
-  font-size: 2.2rem
+  font-size: 2.2rem;
 }
 .article h2 {
   margin-top: 2rem;
   padding-top: 2rem;
   font-size: 1.6rem;
-  position: relative
+  position: relative;
 }
 .article h2:after {
   content: "";
@@ -243,7 +243,7 @@ h2, h3, h4, h5 {
   position: absolute;
   width: calc(100vw - 32px);
 	top: 0;
-  left: 0
+  left: 0;
 }
 h3.h3-contents {
 	margin-top: -36px;
@@ -251,7 +251,7 @@ h3.h3-contents {
 	margin-bottom: 1.5rem;
 	padding-left: .8rem;
 	font-size: 1.4rem;
-	position: relative
+	position: relative;
 }
 h3.h3-contents:after {
   content: "";
@@ -261,54 +261,54 @@ h3.h3-contents:after {
   bottom: 0;
 	border-left: 4px solid #e94f90;
   border-image: linear-gradient(to top, #287bf4 0%, #e94f90 100%);
-  border-image-slice: 1
+  border-image-slice: 1;
 }
 .article h4 {
-  font-size: 1.3rem
+  font-size: 1.3rem;
 }
 h1 + .id-link-button {
-  margin-top: 3.5rem
+  margin-top: 3.5rem;
 }
 h2 + .id-link-button {
-  margin-top: 4.2rem
+  margin-top: 4.2rem;
 }
 h3 + .id-link-button {
-  margin-top: 2.5rem
+  margin-top: 2.5rem;
 }
 h4 + .id-link-button {
-  margin-top: 1.8rem
+  margin-top: 1.8rem;
 }
 h5 + .id-link-button {
-  margin-top: 1.4rem
+  margin-top: 1.4rem;
 }
 .article ol {
-  padding-left: 0
+  padding-left: 0;
 }
 .sidebar-wrap {
-  background-color: #fff
+  background-color: #fff;
 }
 #tree-main a {
 	margin-top: 0;
-  margin-bottom: 0
+  margin-bottom: 0;
 }
 #tree-main a[aria-expanded="true"] {
-  font-weight: 700
+  font-weight: 700;
 }
 .jstree-ocl {
-  padding: 0 5px 0 0
+  padding: 0 5px 0 0;
 }
 #rightside-bar {
-  margin-top: 6rem
+  margin-top: 6rem;
 }
 #tree-main ul {
-  padding-inline-start: 0
+  padding-inline-start: 0;
 }
 .footer-wrap {
   padding-right: 16px;
-	padding-left: 16px
+	padding-left: 16px;
 }
 .article code, .article pre {
-  white-space: inherit
+  white-space: inherit;
 }
 
 /* 古いiPhone向けの設定 ************************************************/
@@ -376,28 +376,28 @@ h5 + .id-link-button {
       top: -182px;
     }
     .page {
-      padding-right: 16px
+      padding-right: 16px;
     }
     .tree-wrap {
       padding-left: 6px;
-      flex: 0 0 292px
+      flex: 0 0 292px;
     }
     .article h2:after {
-      width: calc(100vw - 342px)
+      width: calc(100vw - 342px);
     }
     #tree-nav {
-      border-right: none
+      border-right: none;
     }
     .contents-wrap {
       border-left: 1px solid #e6e6e6;
       width: auto;
-      flex: auto
+      flex: auto;
     }
     #tree-main ul {
       padding-inline-start: 10px;
     }
     .jstree-container-ul {
-      padding-top: 18px
+      padding-top: 18px;
     }
     /* Tiles of the top page */
     .col-flex {
@@ -410,9 +410,9 @@ h5 + .id-link-button {
   .sidebar-wrap {
     float: none;
     flex: 0 0 232px;
-    padding-left: 32px
+    padding-left: 32px;
   }
   .article h2:after {
-    width: calc(100vw - 542px)
+    width: calc(100vw - 542px);
   }
 }
