--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -266,7 +266,7 @@ h2, h3, h4, h5 {
   padding: 5px 16px 5px 6px;
 }
 
-.article h1 {
+.contents-wrap h1 {
   padding-top: 3rem;
   font-size: 2.2rem;
 }
