--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -302,8 +302,8 @@ h3.h3-contents:after {
   left: 0;
   top: 76px;
   bottom: 0;
-	border-left: 4px solid #e94f90;
-  border-image: linear-gradient(to top, #287bf4 0%, #e94f90 100%);
+	border-left: 4px solid #A42F29;
+  border-image: linear-gradient(to top, #4A4B4C 0%, #EF3F24 100%);
   border-image-slice: 1;
 }
 
