--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -271,14 +271,14 @@ h2, h3, h4, h5 {
   font-size: 2.2rem;
 }
 
-.article h2 {
+.contents-wrap h2 {
   margin-top: 2rem;
   padding-top: 2rem;
   font-size: 1.6rem;
   position: relative;
 }
 
-.article h2:after {
+.contents-wrap h2:after {
   content: "";
   border-top: 1px solid #ddd;
   position: absolute;
