Hide step-memo if it is blank

--- a/layouts/shortcodes/anchorstep2.html
+++ b/layouts/shortcodes/anchorstep2.html
@@ -52,4 +52,5 @@
 </div>
 {{- $inner := replaceRE $tmpsect "" .Inner }}
 {{- $inner = replaceRE $tmptitle "" $inner }}
-<div class="step-memo">{{ $inner | markdownify }}</div>
+{{- $hasInner := (findRE "\\S+" $inner) }}
+<div class="step-memo{{ if not $hasInner }} step-memo-blank{{ end }}">{{ $inner | markdownify }}</div>
