--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -42,7 +42,7 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: inherit;
+    font-weight: 700;
 }
 
 *, :after, :before {
@@ -691,19 +691,19 @@ ul.breadcrumbs {
     background-color: #ECEAF7;
 }
 h1 + .id-link-button {
-    margin-top: 5em;
+    margin-top: 3.55em;
 }
 h2 + .id-link-button {
-    margin-top: 3.2em;
+    margin-top: 4.2rem;
 }
 h3 + .id-link-button {
-    margin-top: 2.1em;
+    margin-top: 2.3rem;
 }
 h4 + .id-link-button {
-    margin-top: 2em;
+    margin-top: 1.8rem;
 }
 h5 + .id-link-button {
-    margin-top: 1.3em;
+    margin-top: 1.4rem;
 }
 h6 + .id-link-button {
     margin-top: .8em;
@@ -907,28 +907,40 @@ h6 + .id-link-button {
     padding-bottom: 100px;
 }
 .article h1 {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     line-height: 1.2em;
     margin-bottom: 30px;
-    padding-top: 66px;
+    padding-top: 3rem;
     font-weight: 700;
 }
 .article h2 {
-    font-size: 2.1rem;
-    line-height: 1.2em;
-    margin-bottom: 24px;
-    margin-top: -24px;
-    padding-top: 66px;
-}
-.article h3 {
     font-size: 1.6rem;
     line-height: 1.2em;
-    margin-bottom: 15px;
-    margin-top: -36px;
-    padding-top: 66px;
+    margin-bottom: 24px;
+    margin-top: 2rem;
+    padding-top: 2rem;
+}
+.article h2:before {
+    content: "";
+    border-top: 1px solid #ddd;
+    position: absolute;
+    width: calc(100vw - 32px);
+    top: 0;
+    left: 0;
+}
+.article h3 {
+    font-size: 1.4rem;
+    line-height: 1em;
+    margin-bottom: 1.5rem;
+    margin-top: 1.5em;
+    padding-top: 0.2em;
+    padding-left: 0.4em;
+    border-left: 4px solid #e94f90;
+    border-image: linear-gradient(to top, #287bf4 0%, #e94f90 100%);
+    border-image-slice: 1;
 }
 .article h4 {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     line-height: 1.2em;
     margin-bottom: 12px;
     margin-top: -36px;
@@ -940,7 +952,6 @@ h6 + .id-link-button {
     margin-bottom: 10px;
     margin-top: -42px;
     padding-top: 66px;
-    font-weight: 700;
 }
 .article h6 {
     font-size: 1.0rem;
@@ -948,10 +959,8 @@ h6 + .id-link-button {
     margin-bottom: 10px;
     margin-top: -48px;
     padding-top: 66px;
-    font-weight: 700;
 }
 .article h2,.article h3,.article h4,.article h5,.article h6 {
-    /* マイナスのマージンが見出しの直前の要素をクリック不能にしてしまう問題への対処 */
     position: relative;
     z-index: -1;
 }
@@ -2177,6 +2186,9 @@ i.index-pdf {
         margin-top: 8px;
         border-bottom: 0;
     }
+    .article h2:before {
+        width: calc(100vw - 372px);
+    }
     .first-row {
         flex-wrap: wrap;
         flex-direction: row;
@@ -2309,6 +2321,9 @@ i.index-pdf {
 
     .contents-wrap {
         width: calc(100% - 492px);
+    }
+    .article h2:before {
+        width: calc(100vw - 592px);
     }
     .article {
         width: 100%;
