add background color of right side toc

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -1757,6 +1757,7 @@ i.index-pdf {
     height: 100%;
     overflow: auto;
     font-size: .95rem;
+    background-color: #fff;
 }
 #rightside-bar .toc-title {
     display: none;
