--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -678,6 +678,8 @@ ul.breadcrumbs {
 }
 .id-header {
     display: flex;
+    margin-top: -10px;
+    padding-top: 10px;
 }
 .id-link-button {
     cursor: pointer;
@@ -1754,6 +1756,7 @@ i.index-pdf {
     height: 100%;
     overflow: auto;
     font-size: .95rem;
+    background-color: #fff;
 }
 #rightside-bar .toc-title {
     display: none;
