--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -1241,7 +1241,8 @@ table .wd10 {
 
 .announcement-banner {
     top: 0;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     z-index: 999;
     background-color: #ccc;
     padding: 12px 16px;
