--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -1241,7 +1241,7 @@ table .wd10 {
 
 .announcement-banner {
     top: 0;
-    position: fixed;
+    position: sticky;
     width: 100%;
     z-index: 999;
     background-color: #ccc;
