--- a/layouts/partials/anchorlink.html
+++ b/layouts/partials/anchorlink.html
@@ -12,7 +12,7 @@
             <span>{{ i18n "Permalink" }}</span>
             <i class="fas fa-link" aria-hidden="true"></i>
         </button>
-        <div id="heading-url-{{$id}}" class="heading-url" aria-hideen="true">
+        <div id="heading-url-{{$id}}" class="heading-url" aria-hidden="true">
             <input readonly="readonly" value="{{ printf "%s#%s" $link $id | safeURL}}" name="headingUrl" type="text" onclick="this.focus(); this.select()">
         </div>
     </div>
