--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,6 +4,7 @@
 {{- partial "head" . }}
 {{- partial "announcementbanner.html" . -}}
 {{- partial "header" . }}
+{{- if eq $.Site.Params.TargetRegion "US" }}{{- partial "localemodal" . }}{{- end -}}
 <div class="page-pad"></div>
 {{- if eq $.Site.Params.meganav true }}
 <div class="mnav-pad"></div>
@@ -54,6 +55,9 @@
 {{- partial "gototop" . }}
 {{- partial "enquete" . -}}
 {{- partial "footer" . }}
+{{- if eq $.Site.Params.TargetRegion "US" }}
+    <script type="text/javascript" src="{{ printf "%s" "javascripts/geolocation.js" | relURL }}"></script>
+{{- end -}}
 {{- if and (eq $.Site.Params.product "kintone") (eq $.Site.Params.TargetRegion "JP") }}{{ partial "yahootagmanager" . }}{{- end }}
 {{- end }}
 </body>
