--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,7 @@
 {{- partial "head" . }}
 {{- partial "announcementbanner.html" . -}}
 {{- partial "header" . }}
+{{- if eq $.Site.Params.TargetRegion "US" }}{{- partial "localemodal" . }}{{- end -}}
 <div class="page-pad"></div>
 {{- if eq $.Site.Params.meganav true -}}
 <div class="mnav-pad"></div>
@@ -45,6 +46,10 @@
     <script src="https://www.gstatic.com/prose/brand.js" targetId="logo_place" hl="{{$glang}}"></script>
     {{- end }}
     {{- partial "footer" . }}
+
+{{- if eq $.Site.Params.TargetRegion "US" }}
+    <script type="text/javascript" src="{{ printf "%s" "javascripts/geolocation.js" | relURL }}"></script>
+{{- end -}}
 {{- if and (eq $.Site.Params.product "kintone") (eq $.Site.Params.TargetRegion "JP") }}{{ partial "yahootagmanager" . }}{{- end }}
 </body>
 </html>
