--- a/layouts/partials/localemodal.html
+++ b/layouts/partials/localemodal.html
@@ -1,20 +1,15 @@
-{{- $domain := "help.cybozu.com" }}
 <div class="locale-modal">
-  <div class="locale-modal-content">
-    <div class="locale-modal-close">
-      <button type="submit" class="locale-modal-close-button">
-        <span><i class="fa fa-times-circle" aria-hidden="true"></i> {{ i18n "Close" }}</span>
-      </button>
-    </div>
-    <div class="locale-modal-title">{{ i18n "Locale_modal_message" }}</div>
+  <div class="locale-modal-content" role="dialog" aria-moda="true">
     <div class="locale-modal-text">
-      <div>{{ i18n "Locale_modal_description" }}</div>
-      <div class="locale-modal-not-current-text">
-        <a href="https://{{$domain}}{{ .RelPermalink }}">{{ i18n "Locale_modal_not_current_text" }}</a>
-      </div>
-      <div class="locale-modal-current-text">
-        <a href="{{ .Permalink | relURL }}">{{ i18n "Locale_modal_current_text" }}</a>
-      </div>
+      <div>{{ i18n "Locale_modal_message" | safeHTML }}</div>
+    </div>
+    <div class="locale-modal-button">
+      <button type="button" class="locale-modal-button-yes">
+        <span>{{ i18n "Locale_modal_button_yes" }}</span>
+      </button>
+      <button type="button" class="locale-modal-button-no">
+        <span>{{ i18n "Locale_modal_button_no" }}</span>
+      </button>
     </div>
   </div>
 </div>
