--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -1968,38 +1968,28 @@ i.index-pdf {
     display: none;
 }
 
-.locale-modal a {
-    color: #0d7b91;
-    text-decoration: underline;
-}
-
-.locale-modal-close {
-    text-align: right;
-}
-
-.locale-modal-title {
-    font-size: 1.5rem;
-    font-weight: 800;
-    margin-bottom: 1rem;
-}
-
 .locale-modal-content {
     background-color: #fff;
     margin: 15% auto;
-    padding: 16px;
-    border: 1px solid #888;
+    padding: 24px;
     width: 90%;
-    border-radius: 4px;
+    border-radius: 8px;
     text-align: center;
 }
 
-.locale-modal-text div {
-    padding: 0.75rem 0;
+.locale-modal-button {
+    display: flex;
+    justify-content: center;
 }
 
-.locale-modal-current-text {
-    font-size: 0.8rem;
+.locale-modal-button > button {
+    margin: 24px 12px 0;
+    padding: 8px 12px;
+    color: #fff;
+    background-color: #ef3f24;
+    border-radius: 4px;
 }
+
 /* -------------------- locale modal */
 
 
