--- a/static/stylesheets/video_list.css
+++ b/static/stylesheets/video_list.css
@@ -19,6 +19,7 @@
     left: 0;
     padding-left: 2em;
     width: 100%;
+    height: 0;
     z-index: 999;
     font-size: .8em;
 }
@@ -71,7 +72,6 @@
 
 @media only screen and (min-width:768px){
     .page {
-        top: -180px;
         border-top: none;
         margin-top: 0;
     }
@@ -84,7 +84,7 @@
         padding-top: 20px;
         position: sticky;
         top: 30px;
-        width: 250px;
+        width: 200px;
         font-size: 1em;
     }
     .video-filter input {
