Attach class name

--- a/layouts/shortcodes/stepindex2.html
+++ b/layouts/shortcodes/stepindex2.html
@@ -1,4 +1,4 @@
-<div>
+<div class="step-list-wrapper">
 <strong>Steps:</strong>
     <table class="step-list list-place" id='{{.Get "target"}}'></table>
 </div>
