--- a/layouts/partials/localemodal.html
+++ b/layouts/partials/localemodal.html
@@ -5,10 +5,10 @@
     </div>
     <div class="locale-modal-button">
       <button type="button" class="locale-modal-button-yes">
-        <span>{{ i18n "Locale_modal_button_yes" }}</span>
+        <span>{{ i18n "Yes" }}</span>
       </button>
       <button type="button" class="locale-modal-button-no">
-        <span>{{ i18n "Locale_modal_button_no" }}</span>
+        <span>{{ i18n "No" }}</span>
       </button>
     </div>
   </div>
