--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -20,19 +20,19 @@
         <li>
             <div class="category"> 
                 <span class="navi-icon">
-                    {{- if .IsAncestor $target}}<i class="fa fa-chevron-down"></i>
+                    {{- if  or ( .IsAncestor $target ) ( eq . $target ) }}<i class="fa fa-chevron-down"></i>
                     {{- else}}<i class="fa fa-chevron-right"></i>
                     {{- end}}
                 </span>
                 {{- if eq .RelPermalink $target.RelPermalink}}
-                <a href="#" class="current{{- if .IsAncestor $target}} expand{{end}}">
+                <a href="#" class="current{{- if  or ( .IsAncestor $target ) ( eq . $target ) }} expand{{end}}">
                 {{ else }}
-                <a href="{{ .RelPermalink}}" class="{{- if .IsAncestor $target}}expand{{end}}">
+                <a href="{{ .RelPermalink}}" class="{{- if  or ( .IsAncestor $target ) ( eq . $target ) }}expand{{end}}">
                 {{ end -}}
                 <span>{{- partial "title" . -}}</span></a>
             </div>
                 {{- if ne $numberOfPages 0 }}
-            <ul class="{{- if .IsAncestor $target}}opened{{end}}">
+            <ul class="{{- if  or ( .IsAncestor $target ) ( eq . $target ) }}opened{{end}}">
                     {{- if .Sections}}
                         {{- .Scratch.Set "entries" ($pages | union .Sections) }}
                     {{- else}}
