--- a/static/stylesheets/print.css
+++ b/static/stylesheets/print.css
@@ -172,10 +172,10 @@
 .book-title {
     margin-left: auto;
     margin-right: auto;
-    font-size: 4em;
-    line-height: 1.3em;
+    font-size: 54px;
+    line-height: 1.3;
     margin-top: 50%;
-    width: 60%;
+    width: 520px;
     text-align:center;
     word-break: keep-all;
 }
