replace test tag

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -76,8 +76,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/fmt1ojn.css">
 
     <!-- OneTrust Cookies Consent Notice start -->
-    <script type="text/javascript" src="https://cookie-cdn.cookiepro.com/consent/9d6098cc-90be-4d07-a9ef-6e07312a3016/OtAutoBlock.js"></script>
-    <script src="https://cookie-cdn.cookiepro.com/scripttemplates/otSDKStub.js"  type="text/javascript" charset="UTF-8" data-domain-script="9d6098cc-90be-4d07-a9ef-6e07312a3016"></script>
+    <script src="https://cookie-cdn.cookiepro.com/scripttemplates/otSDKStub.js" type="text/javascript" charset="UTF-8"
+        data-domain-script="2c383e59-de0d-4d34-bba7-628e910b85d9" ></script>
     <script type="text/javascript">
     function OptanonWrapper() { }
     </script>
