adjust cypn booktitle

--- a/static/stylesheets/custom_cypn.css
+++ b/static/stylesheets/custom_cypn.css
@@ -1,6 +1,7 @@
 @media print {
     .book-title {
         font-size: 2.5em;
+        width: 600px;
         white-space: nowrap;
     }
     .wd10 {
